src/deployments/dashboard/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: dashboard.kavanet.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 8443
  tls:
  - hosts:
    - dashboard.kavanet.io
    secretName: dashboard.kavanet.io-tls

# ####################################
# #
# #    #     #                         ######                         #######                     
# #    ##    #  ####  #####  ######    #     #  ####  #####  #####       #    ######  ####  ##### 
# #    # #   # #    # #    # #         #     # #    # #    #   #         #    #      #        #   
# #    #  #  # #    # #    # #####     ######  #    # #    #   #         #    #####   ####    #   
# #    #   # # #    # #    # #         #       #    # #####    #         #    #           #   #   
# #    #    ## #    # #    # #         #       #    # #   #    #         #    #      #    #   #   
# #    #     #  ####  #####  ######    #        ####  #    #   #         #    ######  ####    #   
# #
# ####################################
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: kubernetes-dashboard-entry-point
#   namespace: kubernetes-dashboard
# spec:
#   type: NodePort
#   selector:
#     k8s-app: kubernetes-dashboard
#   ports:
#   - port: 8443
#     targetPort: 8443
#     protocol: TCP
#     nodePort: 31003

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: dashboard
#   namespace: kubernetes-dashboard
# spec:
#   type: LoadBalancer
#   selector:
#     k8s-app: kubernetes-dashboard
#   ports:
#   - port: 8443
#     protocol: TCP

# ---
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: dashboard-ingress
#   namespace: kubernetes-dashboard
#   annotations:
#     kubernetes.io/ingress.class: "traefik"
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     traefik.frontend.rule.type: PathPrefixStrip
#     traefik.frontend.passHostHeader: "false"
#     ingress.kubernetes.io/backend-protocol: http
#     ingress.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: dashboard.kavanet.io
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: kubernetes-dashboard
#             port:
#               number: 8443
#   tls:
#   - hosts:
#     - dashboard.kavanet.io
#     secretName: dashboard.kavanet.io-tls
